--- a/Honeywell/TKET_intro_print.ipynb
+++ b/Honeywell/TKET_intro_print.ipynb
@@ -68,9 +68,8 @@
     }
    },
    "source": [
-    "<div>\n",
-    "   <img src=\"attachment:image-2.png\" width=\"1200\">\n",
-    "</div>"
+    "\n",
+    "![image-2.png](attachment:image-2.png)"
    ]
   },
   {
@@ -87,9 +86,8 @@
     }
    },
    "source": [
-    "<div>\n",
-    "   <img src=\"attachment:image-2.png\" width=\"1200\">\n",
-    "</div>"
+    "\n",
+    "![image-2.png](attachment:image-2.png)"
    ]
   },
   {
@@ -106,9 +104,8 @@
     }
    },
    "source": [
-    "<div>\n",
-    "   <img src=\"attachment:image-4.png\" width=\"1200\">\n",
-    "</div>"
+    "\n",
+    "![image-4.png](attachment:image-4.png)"
    ]
   },
   {
@@ -146,9 +143,8 @@
     }
    },
    "source": [
-    "<div>\n",
-    "   <img src=\"attachment:image-2.png\" width=\"1200\">\n",
-    "</div>"
+    "\n",
+    "![image-2.png](attachment:image-2.png)"
    ]
   },
   {
@@ -165,9 +161,7 @@
     }
    },
    "source": [
-    "<div>\n",
-    "   <img src=\"attachment:image.png\" width=\"1200\">\n",
-    "</div>"
+    "![image.png](attachment:image.png)"
    ]
   },
   {
@@ -203,9 +197,7 @@
     }
    },
    "source": [
-    "<div>\n",
-    "   <img src=\"attachment:image-2.png\" width=\"1200\">\n",
-    "</div>"
+    "![image-2.png](attachment:image-2.png)"
    ]
   },
   {
@@ -1034,9 +1026,8 @@
     "\n",
     "Coherence time (~0.1s) is the limit on how long a qubit can retain its quantum state before that state is ruined by noise. \n",
     "\n",
-    "<div>\n",
-    "   <img src=\"attachment:image-2.png\" width=\"700\">\n",
-    "</div>"
+    "\n",
+    "![image-2.png](attachment:image-2.png)"
    ]
   },
   {
@@ -1760,9 +1751,8 @@
     }
    },
    "source": [
-    "<div>\n",
-    "   <img src=\"attachment:image.png\" width=\"1000\">\n",
-    "</div>"
+    "\n",
+    "![image.png](attachment:image.png)"
    ]
   },
   {
@@ -1915,9 +1905,8 @@
     }
    },
    "source": [
-    "<div>\n",
-    "   <img src=\"attachment:image.png\" width=\"1200\">\n",
-    "</div>"
+    "\n",
+    "![image.png](attachment:image.png)"
    ]
   },
   {
